all conversions added and working

--- a/metric-conversion.html
+++ b/metric-conversion.html
@@ -19,9 +19,15 @@
 
 			<p>Measurement: </p><input type="text" name="value1" id="value1"><br>
 
-			<button class="button" onclick="fToM()">Convert</button>
+			<button class="button" onclick="fToM()">Meters</button>
+			<button class="button" onclick="CenT()">Centimeters</button>
+			<button class="button" onclick="YtM()">Yards to Meters</button>
+			<button class="button" onclick="MtK()">Kilometers</button>
 
 			<p id="resultsentence"></p>
+			<p id="resultsentencec"></p>
+			<p id="resultsentencey"></p>
+			<p id="resultsentencem"></p>
         </div>
       </div>
     </div>
